sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/Trial_Harvest__c.object-meta.xml
<CustomObject>
    <label>Trial Harvest</label>
    <nameField>
        <displayFormat>TH-{000}</displayFormat>
        <label>Trial Harvests</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Harvests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>