sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Block_Size_ha__c.field-meta.xml
<CustomField>
    <fullName>Block_Size_ha__c</fullName>
    <label>Block Size (ha)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>