sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/BlockNo__c.field-meta.xml
<CustomField>
    <fullName>BlockNo__c</fullName>
    <label>Block #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>