sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <label>Crop</label>
    <length>50</length>
    <type>Text</type>
</CustomField>