sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <label>Date of Visit</label>
    <required>true</required>
    <type>Date</type>
</CustomField>