sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Date_planted__c.field-meta.xml
<CustomField>
    <fullName>Date_planted__c</fullName>
    <label>Date planted</label>
    <type>Date</type>
</CustomField>