sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Evergrow_Rate_kgs_hectare__c.field-meta.xml
<CustomField>
    <fullName>Evergrow_Rate_kgs_hectare__c</fullName>
    <formula>Treatment_Block__r.Evergrow_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evergrow Rate (kgs/hectare)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>