sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Farm_Name__c.field-meta.xml
<CustomField>
    <fullName>Farm_Name__c</fullName>
    <formula>Treatment_Block__r.Trial__r.Account__r.Name</formula>
    <label>Farm Name</label>
    <type>Text</type>
</CustomField>