sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Harvest_date__c.field-meta.xml
<CustomField>
    <fullName>Harvest_date__c</fullName>
    <label>Harvest date</label>
    <type>Date</type>
</CustomField>