sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>