sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Treatment_Block__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Block__c</fullName>
    <label>Treatment Block</label>
    <referenceTo>Treatment_Block__c</referenceTo>
    <relationshipLabel>Trial Harvests</relationshipLabel>
    <relationshipName>Trial_Harvests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>