sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trial</label>
    <referenceTo>Trial__c</referenceTo>
    <relationshipLabel>Trial Harvests</relationshipLabel>
    <relationshipName>Trial_Harvests</relationshipName>
    <type>Lookup</type>
</CustomField>