sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <label>Variety</label>
    <length>50</length>
    <type>Text</type>
</CustomField>