sfSandBoxCode/force-app/main/default/objects/Trial_Harvest__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <inlineHelpText>The weight in Kilogrammes</inlineHelpText>
    <label>Yield (KGs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>